# Fuzzy-class

./: CMakeLists.txt  README.md  main.cpp
src/: _fuzzy.cpp  fuzzy_controller.cpp
